--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,63 @@
+amqp==5.1.1
 anyio==3.6.2
 asttokens==2.1.0
+attrs==22.2.0
 backcall==0.2.0
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 decorator==5.1.1
+exceptiongroup==1.1.0
 executing==1.2.0
 fastapi==0.87.0
 filelock==3.8.0
+flake8==6.0.0
 h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
 huggingface-hub==0.10.1
 idna==3.4
+iniconfig==1.1.1
 ipython==8.6.0
 jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.2.0
 jsonpickle==2.2.0
+kombu==5.2.4
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
+mccabe==0.7.0
 numpy==1.23.4
-#nvidia-cublas-cu11==11.10.3.66
-#nvidia-cuda-nvrtc-cu11==11.7.99
-#nvidia-cuda-runtime-cu11==11.7.99
-#nvidia-cudnn-cu11==8.5.0.96
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
 packaging==21.3
 parso==0.8.3
+pet==0.3.2
 pexpect==4.8.0
 pickleshare==0.7.5
+pluggy==1.0.0
 prompt-toolkit==3.0.32
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycodestyle==2.10.0
 pydantic==1.10.2
+pyflakes==3.0.1
 Pygments==2.13.0
 pyparsing==3.0.9
+pytest==7.2.0
 python-multipart==0.0.5
+pytz==2022.7.1
 PyYAML==6.0
 regex==2022.10.31
 requests==2.28.1
+rfc3986==1.5.0
 scikit-learn==1.1.3
 scipy==1.9.3
 sentencepiece==0.1.97
@@ -46,6 +67,7 @@ stack-data==0.6.1
 starlette==0.21.0
 threadpoolctl==3.1.0
 tokenizers==0.13.2
+tomli==2.0.1
 torch==1.13.0
 tqdm==4.64.1
 traitlets==5.5.0
@@ -53,4 +75,5 @@ transformers==4.24.0
 typing_extensions==4.4.0
 urllib3==1.26.12
 uvicorn==0.19.0
+vine==5.0.0
 wcwidth==0.2.5
