--- a/requirements.txt
+++ b/requirements.txt
@@ -33,10 +33,10 @@ MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 numpy==1.23.4
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
+#nvidia-cublas-cu11==11.10.3.66
+#nvidia-cuda-nvrtc-cu11==11.7.99
+#nvidia-cuda-runtime-cu11==11.7.99
+#nvidia-cudnn-cu11==8.5.0.96
 packaging==21.3
 parso==0.8.3
 pet==0.3.2
