--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.1.1
 anyio==3.6.2
+api==0.0.7
 asttokens==2.1.0
 attrs==22.2.0
 backcall==0.2.0
@@ -17,10 +18,13 @@ executing==1.2.0
 fastapi==0.87.0
 filelock==3.8.0
 flake8==6.0.0
+flower==1.2.0
+functions==0.7.0
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
 huggingface-hub==0.10.1
+humanize==4.6.0
 idna==3.4
 iniconfig==1.1.1
 ipython==8.6.0
@@ -32,6 +36,7 @@ kombu==5.2.4
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
+nose==1.3.7
 numpy==1.23.4
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-nvrtc-cu11==11.7.99
@@ -43,6 +48,7 @@ pet==0.3.2
 pexpect==4.8.0
 pickleshare==0.7.5
 pluggy==1.0.0
+prometheus-client==0.16.0
 prompt-toolkit==3.0.32
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -58,6 +64,7 @@ PyYAML==6.0
 regex==2022.10.31
 requests==2.28.1
 rfc3986==1.5.0
+schemas==0.7.1
 scikit-learn==1.1.3
 scipy==1.9.3
 sentencepiece==0.1.97
@@ -69,10 +76,12 @@ threadpoolctl==3.1.0
 tokenizers==0.13.2
 tomli==2.0.1
 torch==1.13.0
+tornado==6.2
 tqdm==4.64.1
 traitlets==5.5.0
 transformers==4.24.0
 typing_extensions==4.4.0
+universities==1.1.0
 urllib3==1.26.12
 uvicorn==0.19.0
 vine==5.0.0
