--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 decorator==5.1.1
+distlib==0.3.6
 exceptiongroup==1.1.0
 executing==1.2.0
 fastapi==0.87.0
@@ -47,6 +48,8 @@ parso==0.8.3
 pet==0.3.2
 pexpect==4.8.0
 pickleshare==0.7.5
+pipenv==2023.2.18
+platformdirs==3.0.0
 pluggy==1.0.0
 prometheus-client==0.16.0
 prompt-toolkit==3.0.32
@@ -85,4 +88,6 @@ universities==1.1.0
 urllib3==1.26.12
 uvicorn==0.19.0
 vine==5.0.0
+virtualenv==20.19.0
+virtualenv-clone==0.5.7
 wcwidth==0.2.5
