--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ numpy==1.23.4
 #nvidia-cuda-runtime-cu11==11.7.99
 #nvidia-cudnn-cu11==8.5.0.96
 packaging==21.3
+pandas==1.5.3
 parso==0.8.3
 pet==0.3.2
 pexpect==4.8.0
