--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+contourpy==1.0.7
 cryptography==39.0.2
+cycler==0.11.0
 decorator==5.1.1
 distlib==0.3.6
 exceptiongroup==1.1.0
@@ -23,6 +25,7 @@ fastapi-sessions==0.3.2
 filelock==3.8.0
 flake8==6.0.0
 flower==1.2.0
+fonttools==4.39.3
 functions==0.7.0
 h11==0.14.0
 httpcore==0.16.3
@@ -37,9 +40,11 @@ jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.2.0
 jsonpickle==2.2.0
+kiwisolver==1.4.4
 kombu==5.2.4
 ldap3==2.9.1
 MarkupSafe==2.1.1
+matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 nose==1.3.7
@@ -55,6 +60,7 @@ passlib==1.7.4
 pet==0.3.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.5.0
 pipenv==2023.2.18
 platformdirs==3.0.0
 pluggy==1.0.0
@@ -70,6 +76,7 @@ pyflakes==3.0.1
 Pygments==2.13.0
 pyparsing==3.0.9
 pytest==7.2.0
+pytest-mock==3.10.0
 python-dateutil==2.8.2
 python-multipart==0.0.5
 pytz==2022.7.1
