--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ DieterichLab_CA.pem
 /data/big
 /static/chart.png
 /static/chart_prediction.png
-log_file
-medbert-512
+chart.png
+chart_prediction.png
