Finalization for publishment

--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,9 @@ python-multipart = "*"
 regex = "*"
 six = "*"
 sniffio = "*"
+sshpass = "*"
 starlette = "*"
+torch = "*"
 tqdm = "*"
 transformers = "*"
 typing-extensions = "*"
