--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
-["build-system"]
-requrires = ["setuptools"]
+[build-system]
+requires = ["setuptools >= 61.0"]
+build-backend = "setuptools.build_meta"
 
-["project"]
+[project]
 name = "PETGUI"
 requires-python = ">= 3.11"
 dynamic = ["version"]
@@ -29,7 +30,6 @@ dependencies= [
 "regex",
 "six",
 "sniffio",
-"sshpass",
 "starlette",
 "tqdm",
 "transformers",
@@ -48,3 +48,6 @@ dev = ["pytest",
 "httpx",
 "selenium",
 "webdriver_manager"]
+
+[tool.setuptools]
+py-modules = []
