--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ starlette==0.27.0
 sympy==1.12
 threadpoolctl==3.2.0
 tokenizers==0.15.0
+torch==2.1.1
 tqdm==4.66.1
 transformers==4.36.0
 triton==2.1.0
